#set_target_properties(RUNTIME_OUTPUT_DIRECTORY .)

#add_executable(100 test.cpp)


### add_executable(100 1620.cpp)


add_executable(100 15829.cpp)
# add_executable(100 1074.cpp)
# add_executable(100 1463.cpp)
# add_executable(100 7576_2.cpp)
#add_executable(100 11050.cpp)
#add_executable(100 2098.cpp)
# add_executable(100 4153.cpp)
# add_executable(100 10814.cpp)
#add_executable(100 11650.cpp)
#add_executable(100 1978.cpp)
#add_executable(100 1920.cpp)
#add_executable(100 1259.cpp)
#add_executable(100 1181.cpp)
#add_executable(100 1018.cpp)
# add_executable(100 6086.cpp)
# add_executable(100 1011.cpp)
# add_executable(100 1929.cpp)

#add_executable(100 dualPriorityQueue.cpp)
# add_executable(100 deque.cpp)
# add_executable(100 mergesort.cpp)
# add_executable(100 queue.cpp)
# add_executable(101 mergesort2.cpp)

add_executable(ghong test.cpp)
add_executable(ghong2 callback.cpp)